[gd_scene load_steps=10 format=3 uid="uid://cqwlhuh8u7fwd"]

[ext_resource type="Script" uid="uid://dyn5ciiowmpg2" path="res://Scripts/stage.gd" id="1_jx7ew"]
[ext_resource type="Texture2D" uid="uid://dav2qgpc45skg" path="res://Textures/Stage.png" id="1_pard1"]
[ext_resource type="Texture2D" uid="uid://5hipjm8p57sb" path="res://Textures/Speakers.png" id="2_cbsrk"]
[ext_resource type="AudioStream" uid="uid://cyklcfth62rmo" path="res://Audio/BonkVex.wav" id="3_6c7jh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kd8aq"]
size = Vector2(96, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyxgt"]
size = Vector2(96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd0hc"]
atlas = ExtResource("2_cbsrk")
region = Rect2(1, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldweb"]
atlas = ExtResource("2_cbsrk")
region = Rect2(34, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_87oru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd0hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldweb")
}],
"loop": true,
"name": &"Play",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd0hc")
}],
"loop": true,
"name": &"RESET",
"speed": 5.0
}]

[node name="Stage" type="Node2D"]
texture_filter = 1
script = ExtResource("1_jx7ew")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 4
scale = Vector2(3, 3)
texture = ExtResource("1_pard1")

[node name="Speakers" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Speakers"]
position = Vector2(-96, 0)
shape = SubResource("RectangleShape2D_kd8aq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Speakers"]
position = Vector2(96, 0)
shape = SubResource("RectangleShape2D_kyxgt")

[node name="SpeakerR" type="AnimatedSprite2D" parent="."]
z_index = 4
position = Vector2(96, -24)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_87oru")
animation = &"RESET"

[node name="SpeakerL" type="AnimatedSprite2D" parent="."]
z_index = 4
position = Vector2(-96, -24)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_87oru")
animation = &"RESET"
flip_h = true

[node name="AudioStreamPlayer2D1" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-100, -4)
stream = ExtResource("3_6c7jh")
volume_db = 10.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2(100, -4)
stream = ExtResource("3_6c7jh")
volume_db = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
